# fma_ions

./: .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  requirements-docs.txt  setup.py  sps_ion_fma_example.py
.github/workflows/: pypi-publish.yml  tests.yml
cases/: sps_ion_fma_example.py
cases/dynamic_aperture_PS/: DA_ps.py
cases/dynamic_aperture_SPS/: DA_sps.py
cases/ps_Pb_ideal_lattice/: ps_fma_Pb_off_momentum_ideal_lattice.py  ps_fma_Pb_off_momentum_ideal_lattice_Qx_Qy_stable_z0_0dot05.py  ps_fma_Pb_off_momentum_ideal_lattice_Qx_Qy_stable_z0_0dot15.py  ps_fma_Pb_off_momentum_ideal_lattice_Qx_Qy_stable_z0_0dot3.py  ps_fma_Pb_on_momentum_ideal_lattice.py  ps_fma_Pb_on_momentum_ideal_lattice_Qx_Qy_stable.py
cases/sps_Pb_ideal_lattice/: sps_fma_Pb_off_momentum_ideal_lattice.py  sps_fma_Pb_off_momentum_ideal_lattice_higher_z0_2.py  sps_fma_Pb_off_momentum_ideal_lattice_higher_z0_2_Qy_0dot19.py  sps_fma_Pb_off_momentum_ideal_lattice_higher_z0_3.py  sps_fma_Pb_off_momentum_ideal_lattice_higher_z0_3_Qy_0dot19.py  sps_fma_Pb_off_momentum_ideal_lattice_higher_z0_Qy_0dot19.py  sps_fma_Pb_off_momentum_ideal_lattice_z0_0dot3_Qy_0dot19.py  sps_fma_Pb_on_momentum_ideal_lattice.py  sps_fma_Pb_on_momentum_ideal_lattice_Qy_0dot19.py  sps_plot_normalized_phase_space.py  sps_plot_phase_space_plot_on_momentum.py  sps_plot_tune_over_action.py
cases/sps_flat_bottom_tracking_SC/: plot_combined_output.py  sps_BB.py  sps_BB_and_magnet_errors.py  sps_ibs_sc_BB_magnet_errors_Qydot19.py  sps_ibs_sc_ideal_lattice.py  sps_ideal_lattice.py
cases/sps_symmetric_lattice/: sps_fma_Pb_on_momentum_symmetricl_lattice.py  sps_tune_and_action_on_momentum_symmetric_lattice.py
data/aperture_fixed/: a0_aper_ind.json  (+2 more)
docs/: changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  physics.rst  quickstart.rst
fma_ions/: __init__.py  _extra_functions.py  dynamic_aperture.py  flat_bottom_tracking.py  fma_data_classes.py  fma_ions.py  helpers.py  parabolic_longitudinal.py  plot_settings.py  resonance_lines.py  sequence_classes_leir.py  sequence_classes_ps.py  sequence_classes_sps.py  sps_flat_bottom_tracking.py  statisticalEmittance.py  submitter.py  tune_ripple.py
htcondor_submission/: launch_sps_flat_bottom_cpu.py  launch_sps_flat_bottom_gpu.py
venvs/: fma_environment.yml  requirements.txt
(+1090 files in other folders)
