[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fma_ions"
description = "Package to perform frequency map analysis for ions"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Elias Waagaard", email = "elias.walter.waagaard@cern.ch" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
    "NAFFlib"
]

[tool.setuptools]
py-modules = ['fma_ions']
