[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fma_ions"
description = "Python package for Frequency Map Analysis of ion beams in particle accelerators"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name = "Elias Waagaard", email = "elias.walter.waagaard@cern.ch" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "cpymad>=1.9.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "NAFFlib>=0.1.0",
    "xtrack>=0.40.0",
    "xfields>=0.16.0",
    "xpart>=0.36.0",
    "typing_extensions>=4.0.0; python_version<'3.11'"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.900",
    "flake8>=4.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autoapi>=2.0.0",
    "myst-parser>=0.18.0",
    "sphinx-copybutton>=0.5.0",
    "sphinxcontrib-mermaid>=0.8.0"
]

[project.urls]
Homepage = "https://github.com/ewaagaard/fma_ions"
Documentation = "https://fma-ions.readthedocs.io/"
Source = "https://github.com/ewaagaard/fma_ions"
Tracker = "https://github.com/ewaagaard/fma_ions/issues"

[tool.setuptools]
py-modules = ['fma_ions']

[tool.setuptools.packages.find]
where = ["."]
include = ["fma_ions*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[metadata]
license_file = "LICENSE"
